updated about page

--- a/site.css
+++ b/site.css
@@ -4,3 +4,7 @@ body {
     font-size: xx-large;
     font: bold;
 }
+
+p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
