--- a/site.css
+++ b/site.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(230, 173, 173);
     font-style: italic;
     font-size: xx-large;
     font: bold;
